--- a/src/css/index.css
+++ b/src/css/index.css
@@ -121,6 +121,24 @@ div > h3 {
   pointer-events: none;
 }
 
+.arrow-left {
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+
+  border-right: 10px solid var(--color);
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 @keyframes wave-1 {
   0% {
     transform: translateX(20%);
