--- a/src/css/index.css
+++ b/src/css/index.css
@@ -105,6 +105,20 @@ div > h3 {
   position: relative;
 }
 
+.masked-border {
+  --mask: linear-gradient(
+      to left,
+      rgba(0, 0, 0, 0) 0,
+      rgba(0, 0, 0, 1) 3%,
+      rgba(0, 0, 0, 1) 97%,
+      rgba(0, 0, 0, 0) 100%
+    )
+    100% 50% / 100% 100% repeat-x;
+
+  -webkit-mask: var(--mask);
+  mask: var(--mask);
+}
+
 .academic-box:before {
   content: "";
   position: absolute;
