--- a/src/css/index.css
+++ b/src/css/index.css
@@ -24,6 +24,16 @@ body {
   color: #f1f1f1;
 }
 
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 ul > li {
   margin-bottom: 4px;
 }
