--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,8 +1,48 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@400..800&display=swap"); */
+@import "tailwindcss";
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+/*
+  The default border color has changed to `currentcolor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+
+@theme {
+  --breakpoint-md: 64rem;
+  --breakpoint-lg: 80rem;
+  --breakpoint-xl: 96rem;
+
+  --color-maincolor-50: #f6f6f6;
+  --color-maincolor-100: #e7e7e7;
+  --color-maincolor-200: #d1d1d1;
+  --color-maincolor-300: #b0b0b0;
+  --color-maincolor-400: #888888;
+  --color-maincolor-500: #6d6d6d;
+  --color-maincolor-600: #5d5d5d;
+  --color-maincolor-700: #4f4f4f;
+  --color-maincolor-800: #454545;
+  --color-maincolor-900: #3d3d3d;
+  --color-maincolor-950: #242424;
+
+  --color-line: "#e6e7e8";
+  --color-hanarogreen: "#5ec65e";
+  --color-graphcyan: "#50e3c2";
+  --color-graphorange: "#f5a623";
+  --color-disabled: "#9e9e9E";
+  --color-gitbgvar: "#2d333b";
+  --color-bgmain: "#fafafb";
+  --color-bgcolor: "#242424";
+  --color-menuactive: "#f1f1fa";
+  --color-menuhover: "#f1f1fa";
+  --color-inputfocus: "#5e5ec6";
+  --color-buttonclick: "#4341bb";
+
+  --shadow-boxShadow: 0 0 0 200vmax rgba(0, 0, 0, 0.7);
+
+  /* --transition-property-navigator: transform, width; */
+}
 
 :root {
   margin: 0;
@@ -22,16 +62,6 @@
 body {
   background-color: #242424;
   color: #f1f1f1;
-}
-
-.no-scrollbar::-webkit-scrollbar {
-  display: none;
-}
-
-/* Hide scrollbar for IE, Edge and Firefox */
-.no-scrollbar {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
 }
 
 ul > li {
